--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"eslint": "^8.20.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
+		"husky": "^8.0.1",
 		"prettier": "^2.7.1",
 		"typescript": "^4.7.4",
 		"vitest": "^0.18.1"
