--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "channel",
-	"version": "1.0.0",
+	"version": "1.0.0-alpha",
 	"main": "dist/index.js",
 	"typings": "dist/index.d.ts",
 	"author": "T3NED <oss@t3ned.dev>",
