--- a/package.json
+++ b/package.json
@@ -37,6 +37,11 @@
 		"test": "npx vitest run --coverage",
 		"watch:test": "npx vitest --coverage"
 	},
+	"optionalDependencies": {
+		"@types/express": "^4.17.13",
+		"express": "^4.18.1",
+		"fastify": "^4.2.1"
+	},
 	"devDependencies": {
 		"@types/node": "^18.0.5",
 		"@typescript-eslint/eslint-plugin": "^5.30.6",
