--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,11 @@ jobs:
             - name: Build project
               run: pnpm build
 
+            - name: Create .npmrc
+              run: echo '//registry.npmjs.org/:_authToken=${NPM_TOKEN}' > .npmrc
+
             - name: Publish
               run: pnpm publish --no-git-checks
+
               env:
                   NPM_PUBLISH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
