--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,8 @@
 		"checkJs": true,
 
 		/* Emit */
-		"declaration": false,
-		"declarationMap": false,
+		"declaration": true,
+		"declarationMap": true,
 		"sourceMap": true,
 		"removeComments": true,
 		"importsNotUsedAsValues": "error",
