--- a/package.json
+++ b/package.json
@@ -36,11 +36,6 @@
 		"test": "npx vitest run --coverage",
 		"watch:test": "npx vitest --coverage"
 	},
-	"optionalDependencies": {
-		"@types/express": "^4.17.13",
-		"express": "^4.18.1",
-		"fastify": "^4.2.1"
-	},
 	"devDependencies": {
 		"@types/node": "^18.0.5",
 		"@typescript-eslint/eslint-plugin": "^5.30.6",
@@ -53,5 +48,8 @@
 		"prettier": "^2.7.1",
 		"typescript": "^4.7.4",
 		"vitest": "^0.18.1"
+	},
+	"dependencies": {
+		"fastify": "^4.3.0"
 	}
 }
