--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
 		"declaration": true,
 		"declarationMap": true,
 		"sourceMap": true,
-		"removeComments": true,
+		"removeComments": false,
 		"importsNotUsedAsValues": "error",
 		"preserveConstEnums": true,
 
