--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
 		"test": "npx vitest run --coverage",
 		"watch:test": "npx vitest --coverage"
 	},
+	"dependencies": {
+		"@fastify/cors": "^8.1.0",
+		"fastify": "^4.3.0",
+		"zod": "^3.17.10"
+	},
 	"devDependencies": {
 		"@types/node": "^18.0.5",
 		"@typescript-eslint/eslint-plugin": "^5.30.6",
@@ -48,9 +53,5 @@
 		"prettier": "^2.7.1",
 		"typescript": "^4.7.4",
 		"vitest": "^0.18.1"
-	},
-	"dependencies": {
-		"fastify": "^4.3.0",
-		"zod": "^3.17.10"
 	}
 }
